--- a/config/database.yml
+++ b/config/database.yml
@@ -10,11 +10,11 @@
 #       Install PostgreSQL and put its /bin directory on your path.
 development:
   adapter: postgresql
-  encoding: unicode
-  database: job_board_development
+  encoding: utf8
+  database: job_board_dev
   pool: 5
-  username: job_board
-  password:
+  username: job_board_dev
+  password: lockbox7
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
