--- a/config/database.yml
+++ b/config/database.yml
@@ -1,13 +1,5 @@
 # PostgreSQL. Versions 7.4 and 8.x are supported.
-#
-# Install the pg driver:
-#   gem install pg
-# On Mac OS X with macports:
-#   gem install pg -- --with-pg-config=/opt/local/lib/postgresql84/bin/pg_config
-# On Windows:
-#   gem install pg
-#       Choose the win32 build.
-#       Install PostgreSQL and put its /bin directory on your path.
+
 development:
   adapter: postgresql
   encoding: utf8
@@ -16,36 +8,18 @@ development:
   username: job_board_dev
   password: lockbox7
 
-  # Connect on a TCP socket. Omitted by default since the client uses a
-  # domain socket that doesn't need configuration. Windows does not have
-  # domain sockets, so uncomment these lines.
-  #host: localhost
-  #port: 5432
-
-  # Schema search path. The server defaults to $user,public
-  #schema_search_path: myapp,sharedapp,public
-
-  # Minimum log levels, in increasing order:
-  #   debug5, debug4, debug3, debug2, debug1,
-  #   log, notice, warning, error, fatal, and panic
-  # The server defaults to notice.
-  #min_messages: warning
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: job_board_test
   pool: 5
-  username: job_board
-  password:
+  username: job_board_test
+  password: lockbox7
 
 production:
   adapter: postgresql
-  encoding: unicode
+  encoding: utf8
   database: job_board_production
   pool: 5
-  username: job_board
-  password:
+  username: job_board_production
+  password: lockbox7
