--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,17 @@
-# Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
+poster:
+  name: Adam Poster
+  email: poster@test.com
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+responder:
+  name: Bill Responder
+  email: responder@test.com
+
+consultant:
+  name: Charlie Consultant
+  email: charlie@test.com
+
+manager:
+  name: Martin Manager
+  email: manager@test.com
+
+
